added email templates

--- a/app/templates/email/notification.html
+++ b/app/templates/email/notification.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-Hello {{user.username}}
-Welcome to Personal Blog
-We have just seen you have signed up for our application and want to welcome on board. The posts and article here main purpose is to educate enlighten and programming jokes Regards!
+<body>
+    Hello our esteemed reader,
+    New comments have been added to a post that you subscribed to receive notification. Login to view and the content. Thank you
+    From Izzie Blog.
+</body>
 </body>
 </html>
