--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -3,16 +3,13 @@
 {%for post in posts%}
 
     
-    <div class="card col-md-7" style="background-color: rgb(194, 194, 197);margin:5px;width:80%;height:auto;margin:20px">
-            <div class="row"style="height:120px;overflow-x: auto;">{{post.content}}</div>
+    <div class="container" style="background-color: rgb(194, 194, 197);margin:5px;width:80%;height:auto;padding-bottom:10px;margin:20px">
+            <div class="row"style="max-height:160px;min-height:50px;overflow-x: auto;">{{post.content}}</div>
 
-            <div class="row" style="margin-left:10px;padding-left:10px">
-                <h4>Details</h4>
-                
-                
+            <div class="row" style="margin-left:10px;padding-left:10px">                
+            
                 <div class="row">Posted on: {{post.posted.strftime('%Y-%m-%d %H:%m')}}</div>
             </div>
-            <h4>Actions</h4>
             
              <div class="row" style="width:100%;min-width:200px">
                 <div class="col-sm-3">
@@ -27,13 +24,41 @@
 {%macro displayComment(commentList)%}
 {%for comment in commentList%}
 
-        <div class="card col-md-12" style="background-color: #ffdead; padding:20px;margin:5px;min-width:600px;height:200px;max-height:300px;">
-            <div class="row"style="height:120px;overflow-x: auto;">{{comment.content}}</div>
+    <div class="card col-md-12" style="background-color: #ffdead; padding:20px;margin:5px;min-width:600px;height:200px;max-height:300px;">
+        <div class="row"style="height:120px;overflow-x: auto;">{{comment.content}}</div>
 
-            <div class="row" style="margin-left:10px;padding-left:10px">
-            Posted by: {{comment.owner}}
-            </div>
-            <div class="col-md-1"><a href="{{comment.id}}/delete"><button style="background:red;color:white">DELETE</button></a></div>
+        <div class="row" style="margin-left:10px;padding-left:10px">
+        Posted by: {{comment.owner}}
+    
         </div>
-        {%endfor%}
-        {%endmacro%}
+        <div class="col-md-1"><a href="/{{comment.id}}/deletecomment"><button style="background:red;color:white">DELETE</button></a></div>
+    </div>
+{%endfor%}
+{%endmacro%}
+{%macro displayMyPosts(posts)%}
+{%for post in posts%}
+
+    
+    <div class="container" style="background-color: rgb(194, 194, 197);margin:5px;width:100%;height:auto;padding-bottom:10px;margin:20px;padding-left:40px">
+            <div class="row"><h3>{{post.topic}}</h3></div>
+            <div class="row"style="max-height:160px;min-height:50px;overflow-x: auto;padding-left:10px;">{{post.content}}</div>
+
+            <div class="row" style="margin-left:10px;padding-left:10px">                
+            
+                <div class="row">Posted on: {{post.posted.strftime('%Y-%m-%d %H:%m')}}</div>
+            </div>
+            
+             <div class="row" style="width:100%;min-width:fit-content;display:flex;flex-direction:row;justify-content:flex-start">
+            
+                <div class="col-sm-5"><a href="/{{post.id}}/deletepost"><button style="color:white;background-color:red">Delete</button></a></div>
+                
+                <div class="col-sm-5">
+                    <a href="{{post.id}}/update"><button style="background-color:blue;color:white">Update post</button></a>
+                </div>
+              
+        </div>
+       
+    </div>
+
+{%endfor%}
+{%endmacro%}
