--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -9,7 +9,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
-                <li><a href="{{url_for('auth.profile')}}">Profile</a></li>
+                <li><a href="{{url_for('auth.profile')}}">Post Profile</a></li>
   
                 <ul class="nav navbar-nav navbar-right">
                   {% if current_user.is_authenticated %}
