--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,25 +12,16 @@
 
 <div class="container" style="display: flex;flex-direction:column">
     <div class="col-md-12 card" style="justify-content: center;align-items:center;">
-        <div class="container-fluid" style="background-color: lightblue;min-height:fit-content;text-align:center">
+        <div class="container-fluid" style="background-color: lightblue;min-height:fit-content;text-align:center;margin-bottom:20px;">
             <div class="row"><h3>{{quote.quote}}</h3></div>
             <div class="row">{{quote.author}}</div>
         </div>
-        <div class="row">
-            <div class="col-md-6" > 
-              <h3 class="" id="card">Subscribe to our newsletter</h3>
-              <p><b><u><button class="btn btn-danger btn-lg" style="color:#fff"><a href="/Subscribe">Subscribe</a></button></u></b></p>
-            </div> 
+       
+        <a href="{{url_for('auth.addpost')}}"><button>Add Post</button></a>
+        <div class="container">
+            {{macro.displayPosts(posts)}}
         </div>
-   <a href="{{url_for('auth.addpost')}}"><button>Add Post</button></a>
-
     </div> 
-    </div>
-
-
-
-    {{macro.displayPosts(posts)}}
-
-
-
+    
+</div>
 {%endblock%}
